# mlops

./: .env.example  .gitignore  Dockerfile.api  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
demand_forecasting/app/: streamlit_app.py
demand_forecasting/etl/: pipeline.py
demand_forecasting/flows/: deployments.py  orchestration.py
demand_forecasting/pipelines/: feature_engineering.py  inference.py  model_selection.py  model_zoo.py  preprocessing.py  reconciliation.py  training.py
demand_forecasting/tests/: test_demand_pipelines.py
docs/: ARCHITECTURE.md  DATABASE_GUIDE.md
fraud_detection/api/: __init__.py  app.py  schemas.py
fraud_detection/etl/: batch_pipeline.py
fraud_detection/feature_repo/: feature_store.yaml  features.py  materialize.py
fraud_detection/flows/: deployments.py  orchestration.py
fraud_detection/pipelines/: training.py
fraud_detection/spark/jobs/: feature_streaming.py
fraud_detection/streaming/: consumer.py  feature_computer.py  inference_service.py  producer.py
fraud_detection/tests/: locustfile.py  test_fraud_pipelines.py
infra/: init-db.sql
infra/clickhouse/: init.sql
infra/dbt/: dbt_project.yml  profiles.yml
infra/dbt/models/marts/demand/: mart_demand__product_forecast.sql
infra/dbt/models/marts/fraud/: mart_fraud__model_performance.sql
infra/dbt/models/staging/demand/: schema.yml  src_demand.yml  stg_demand__external_daily.sql  stg_demand__products.sql  stg_demand__promotions.sql  stg_demand__sales.sql
infra/dbt/models/staging/fraud/: schema.yml  src_fraud.yml  stg_fraud__transactions.sql
infra/grafana/dashboards/: ml_model_health.json
infra/grafana/provisioning/: dashboards.yml  datasources.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/scripts/: init_localstack.sh
infra/terraform/environments/local/: main.tf
infra/terraform/modules/ecr/: main.tf
infra/terraform/modules/ecs/: main.tf
infra/terraform/modules/networking/: main.tf
infra/terraform/modules/s3/: main.tf
mlops_academy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/: alerting.py  config.py  deployment_strategies.py  mlflow_utils.py  post_processing.py  prediction_cache.py  resilience.py
shared/clients/: __init__.py
shared/data_quality/: __init__.py  data_contracts.py  quality.py
shared/data_quality/contracts/: fraud_transactions_contract.yaml  sales_contract.yaml
shared/db/: __init__.py  models.py  session.py
shared/monitoring/: drift.py  evidently_reports.py  explainability.py  model_card.py
shared/observability/: __init__.py  logging.py  metrics.py  tracing.py
