[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-academy"
version = "1.0.0"
description = "End-to-end MLOps learning projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "mlflow>=2.14.0",
    "prefect>=2.19.0",
    "feast>=0.38.0",
    "redis>=5.0.0",
    "confluent-kafka>=2.4.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "evidently>=0.4.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "joblib>=1.4.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "scipy>=1.12.0",
    "clickhouse-connect>=0.7.0",
    "qdrant-client>=1.9.0",
    "holidays>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "demand_forecasting*", "fraud_detection*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["demand_forecasting/tests", "fraud_detection/tests"]
pythonpath = ["."]
