[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-academy"
version = "1.0.0"
description = "End-to-end MLOps learning projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "mlflow>=2.14.0",
    "prefect>=2.19.0",
    "feast>=0.38.0",
    "redis>=5.0.0",
    "confluent-kafka>=2.4.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "evidently>=0.4.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "joblib>=1.4.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "scipy>=1.12.0",
    "clickhouse-connect>=0.7.0",
    "qdrant-client>=1.9.0",
    "holidays>=0.40",
    # Pillar 3+4: FastAPI + Resilience
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Pillar 5: Explainability
    "shap>=0.45.0",
    "numba>=0.59.0",
    "jinja2>=3.1.0",
    # Pillar 6: Observability
    "structlog>=24.1.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    # Pillar 1: Data Quality
    "great-expectations>=1.0.0",
    # Pillar 10: Data Versioning
    "dvc[s3]>=3.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "locust>=2.29.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "demand_forecasting*", "fraud_detection*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["demand_forecasting/tests", "fraud_detection/tests"]
pythonpath = ["."]
